--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Philip Kramer (philip@onmap.co.il)",
   "license": "MIT",
   "dependencies": {
+    "commander": "^2.11.0",
+    "glob": "^7.1.2",
     "lodash": "4.17.4",
     "unzip2": "0.2.5",
     "xml2js": "0.4.19"
