--- a/package.json
+++ b/package.json
@@ -7,8 +7,19 @@
     "l10ngen": "./index.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --runInBand --forceExit --config ./internals/jest/jest.config.json"
   },
   "author": "Philip Kramer (philip@onmap.co.il)",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "archiver": "^2.1.0",
+    "commander": "^2.11.0",
+    "glob": "^7.1.2",
+    "lodash": "4.17.4",
+    "unzip2": "0.2.5",
+    "xml2js": "0.4.19"
+  },
+  "devDependencies": {
+    "jest-cli": "21.2.1"
+  }
 }
