--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "glob": "7.1.2",
     "lodash": "4.17.4",
     "unzip2": "0.2.5",
-    "xml2js": "0.4.19"
+    "xml2js": "0.4.19",
+    "xml2js-xpath": "^0.8.0"
   },
   "devDependencies": {
     "eslint": "^4.13.1",
