--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "archiver": "2.1.0",
+    "axios": "^0.17.1",
     "commander": "2.11.0",
     "glob": "7.1.2",
     "lodash": "4.17.4",
