--- a/internals/jest/jest.config.json
+++ b/internals/jest/jest.config.json
@@ -1,15 +1,17 @@
 {
   "testEnvironment": "node",
   "rootDir": "../../",
+  "setupFiles": ["./internals/jest/jest.setup.js"],
   "coverageDirectory": "coverage",
   "collectCoverageFrom": ["src/**"],
   "coveragePathIgnorePatterns": ["/tests/"],
   "coverageThreshold": {
     "global": {
-      "statements": 0,
-      "branches": 0,
-      "functions": 0,
-      "lines": 0
+      "statements": 80,
+      "branches": 70,
+      "functions": 80,
+      "lines": 85
     }
-  }
+  },
+  "testPathIgnorePatterns": ["/no-"]
 }
