--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "l10n-gen": "./src/index.js"
   },
   "scripts": {
-    "test": "jest --runInBand --forceExit --config ./internals/jest/jest.config.json",
+    "test": "jest --forceExit --config ./internals/jest/jest.config.json",
+    "test:single": "yarn test --verbose",
+    "test:ci": "yarn test --ci --silent --colors --coverage",
     "lint": "eslint ."
   },
   "author": "Philip Kramer (philip@onmap.co.il)",
@@ -17,7 +19,7 @@
     "archiver": "2.1.0",
     "axios": "^0.17.1",
     "backpack-core": "0.4.3",
-    "commander": "2.11.0",
+    "commander": "^2.12.2",
     "glob": "7.1.2",
     "lodash": "4.17.4",
     "unzip2": "0.2.5",
@@ -26,12 +28,12 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "^1.10.0",
-    "babel-eslint": "^8.0.3",
-    "eslint": "^4.13.1",
+    "babel-eslint": "^8.1.2",
+    "eslint": "^4.14.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "jest-cli": "21.2.1"
+    "jest": "^22.0.4"
   }
 }
