--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "github:onmap/L1on-Gen",
   "main": "index.js",
   "bin": {
-    "l10n-gen": "index.js"
+    "l10n-gen": "bin.js"
   },
   "scripts": {
     "build": "yarn build:clean && backpack build",
