--- a/.eslintrc
+++ b/.eslintrc
@@ -1,32 +1,17 @@
 {
-    "extends": "airbnb",
+    "extends": ["babel", "plugin:node/recommended"],
     "env": {
-      "node": true,
-      "jest": true
+      "node": true
     },
-    "plugins": ["import"],
+    "plugins": [
+      "node"
+    ],
     "settings": {
       "import/resolve": {
         "moduleDirectory": ["node_modules"]
       }
     },
     "rules": {
-      "comma-dangle": [2, "never"],
-      "import/prefer-default-export": 0,
-      "function-paren-newline": 0,
-      "no-multiple-empty-lines": ["error", { "max": 1 }],
-      // TODO: Refactor
-      "import/no-extraneous-dependencies" : 0,
-      "prefer-destructuring": 0,
-      // Refactor after Firebolt update
-      "no-restricted-syntax": 0,
-      "func-names": 0, // after generetors are out
-      "no-param-reassign": 0,
-      "class-methods-use-this": 0,
-      "no-continue": 0,
-      "no-await-in-loop": 0,
-      // Prettier
-      "no-mixed-operators": 0
     }
   }
   
