--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "Philip Kramer (philip@onmap.co.il)",
   "license": "MIT",
   "main": "lib/index.js",
+  "engines": {
+    "node": ">= 4"
+  },
   "files": [
     "bin",
     "lib"
