--- a/package.json
+++ b/package.json
@@ -20,13 +20,11 @@
     "build": "babel src -d lib",
     "lint": "eslint . --ignore-path .gitignore",
     "lint:fix": "yarn lint --fix",
-    "prepar": "yarn build",
+    "prepare": "yarn build",
     "pretest": "yarn lint --cache",
     "test": "jest",
     "test:single": "yarn test --verbose",
     "test:ci": "yarn test --ci --colors --coverage --silent",
-    "playground": "yarn test:single -- playground --watch",
-    "precommit": "lint-staged",
     "prettier:all": "prettier-eslint \"**/*.js\" --write",
     "prettier": "prettier-eslint --write"
   },
