Create upload key endpoint handler + minor refactor

--- a/.babelrc
+++ b/.babelrc
@@ -1,26 +1,8 @@
 {
   "presets": [
-    ["env", {
-      "targets": {
-        "node": 4
-      }
-    }]
+    ["env", { "targets": { "node": "current" } }]
   ],
   "plugins": [
     "add-module-exports"
-  ],
-  "env": {
-    "test": {
-      "presets": [
-        ["env", {
-          "targets": {
-            "node": "current"
-          }
-        }]
-      ],
-      "plugins": [
-        "add-module-exports"
-      ]
-    }
-  }
+  ]
 }
