--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,24 @@ jobs:
           name: Test
           command: yarn test
 
+  deploy:
+    docker:
+      - image: circleci/node:8.9.0
+    working_directory: ~/repo
+    steps:
+      - run:
+          name: Setup Token
+          command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc
+      - checkout
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "yarn.lock" }}
+          # fallback to using the latest cache if no exact match is found
+          - v1-dependencies-
+      - run:
+          name: Publish to NPM
+          command: yarn publish --no-git-tag-version --new-version ${CIRCLE_TAG}
+
 workflows:
   version: 2
   build-n-test:
@@ -53,3 +71,11 @@ workflows:
       - test:
           requires:
             - build
+  deploy-npm:
+    jobs:
+      - deploy:
+          filters:
+            tags:
+              only: /\b\d+.\d*.\b\d*/
+            branches:
+              ignore: /.*/
