--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
   "license": "MIT",
   "main": "dist/index.js",
   "engines": {
-    "node": ">= 4"
+    "node": ">= 10"
   },
-  "files": ["bin", "dist"],
+  "files": [
+    "bin",
+    "dist"
+  ],
   "bin": {
     "l10n-gen": "./bin/l10n-gen.js"
   },
@@ -31,19 +34,19 @@
     ]
   },
   "dependencies": {
-    "archiver": "^2.1.1",
-    "axios": "^0.17.1",
-    "commander": "^2.13.0",
-    "glob": "7.1.2",
-    "lodash": "4.17.4",
+    "archiver": "^5.3.0",
+    "axios": "^0.21.1",
+    "commander": "^7.2.0",
+    "glob": "7.1.7",
+    "lodash": "4.17.21",
     "unzip2": "0.2.5",
-    "xml2js": "0.4.19",
-    "xml2js-xpath": "^0.8.0"
+    "xml2js": "0.4.23",
+    "xml2js-xpath": "^0.12.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-env": "^1.6.1",
+    "babel-plugin-add-module-exports": "^1.0.4",
+    "babel-preset-env": "^1.7.0",
     "jest": "^22.0.5",
     "kcd-scripts": "^0.32.1"
   }
