--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "main": "dist/index.js",
   "engines": {
-    "node": ">= 10"
+    "node": ">= 8"
   },
   "files": [
     "bin",
@@ -34,9 +34,9 @@
     ]
   },
   "dependencies": {
-    "archiver": "^5.3.0",
+    "archiver": "^2.1.1",
     "axios": "^0.21.1",
-    "commander": "^7.2.0",
+    "commander": "^2.13.0",
     "glob": "7.1.7",
     "lodash": "4.17.21",
     "unzip2": "0.2.5",
@@ -47,7 +47,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-add-module-exports": "^1.0.4",
     "babel-preset-env": "^1.7.0",
-    "jest": "^22.0.5",
-    "kcd-scripts": "^0.32.1"
+    "jest": "22.4.4",
+    "kcd-scripts": "0.39.0"
   }
 }
